<resources>
    <string name="app_name">RoomDemo</string>
    <string name="product_id">Product ID</string>
    <string name="not_assigned">Not assigned</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="delete">Delete</string>
    <string name="product_price">Product Price</string>
    <string name="textview">TextView</string>
    <string name="stock_alert_system">Stock Alert System</string>
    <string name="proceed">Proceed</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="cancel">Cancel</string>
    <string name="appiconimage">appiconimage</string>
    <string name="stock_check_system">Stock Check System</string>
    <string name="app_version_0_0_1">App Version: 0.0.1</string>
    <string name="developers">Developers</string>
    <string name="elton_wong_chun">Elton Wong Chun</string>
    <string name="liew_jie_shen">Liew Jie Shen</string>
    <string name="loh_yu_jin">Loh Yu Jin</string>
    <string name="khew_xavier_ethan">Khew Xavier Ethan</string>
    <string name="ong_wen_xuan">Ong Wen Xuan</string>
    <string name="about_app">About App</string>
    <string name="app_developers">App Developers:</string>
    <string name="product_name">Product Name*</string>
    <string name="delete_product">Delete Product</string>
    <string name="elton_wong_chun_meng">Elton Wong Chun Meng</string>
    <string name="product_name">Product Name*</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_price">Product Price</string>
    <string name="cancel">Cancel</string>
    <string name="update_stock">Update Stock</string>
    <string name="update">Update</string>
    <string name="liew_jie_sheng">Liew Jie Sheng</string>
</resources>