<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFA000"
    tools:context=".ui.main.DeleteStockFragment">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="112dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/deleteproduct_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Product Id"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/deleteproduct_id_textfield"
                android:layout_width="423dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/deleteproduct_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/quantity"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/deleteproduct_qty_textfield"
                android:layout_width="423dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/deleteproduct_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/price"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/deleteproduct_price_textfield"
                android:layout_width="423dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/updateproduct_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Product Name*"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/delete_search"
        app:layout_constraintEnd_toStartOf="@+id/deleteproduct_name_textfield"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536" />

    <Button
        android:id="@+id/delete_search"
        android:layout_width="317dp"
        android:layout_height="40dp"
        android:layout_marginBottom="31dp"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteproduct_name_textfield"
        app:layout_constraintVertical_bias="1.0"
        android:background="@drawable/custom_button"
        android:textColor="@color/main_color"/>

    <EditText
        android:id="@+id/deleteproduct_name_textfield"
        android:layout_width="231dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="393dp"
        android:layout_height="226dp"
        android:layout_marginTop="421dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/deleteproduct_name_textfield">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="53dp">

            <Button
                android:id="@+id/deleteproduct_delete_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="80px"
                android:text="Delete"
                android:textAlignment="center"
                android:background="@drawable/custom_button"
                android:textColor="@color/main_color"/>

            <Button
                android:id="@+id/deleteproduct_cancel_btn"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_margin="80px"
                android:text="@string/cancel"
                android:background="@drawable/custom_button"
                android:textColor="@color/main_color"/>
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/msg"
        android:layout_width="153dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:text="Delete Product"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>